ISSUE-13 Remove unused dependencies on "Reimport all modules"

--- a/src/main/resources/IvyPlugBundle.properties
+++ b/src/main/resources/IvyPlugBundle.properties
@@ -1,4 +1,5 @@
-path.to.ivysettings.xml.file=Path to ivysettings.xml file:
+module.path.to.ivysettings.xml.file=Path to ivysettings.xml file:
+project.path.to.ivysettings.xml.file=Path to default ivysettings.xml file:
 select.ivysettings.xml.file.location=Select ivysettings.xml file location
 selected.file.will.be.used.for.ivy.configuration=Selected file will be used for Ivy configuration
 file.doesnt.exist=File {0} doesn't exist
@@ -31,3 +32,4 @@ preparing.to.synchronize.module.ivy.dependencies=Preparing to synchronize "{0}" 
 failed.to.locate.dependency=Failed to locate dependency {0}
 reimport.ivy.module=Reimport Ivy Module
 reimport.ivy.module.parametrized=Reimport Ivy Module "{0}"
+auto.cleanup.checkbox=Automatically remove unused libraries on rebuild
