--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -18,6 +18,9 @@
         <component>
             <implementation-class>ivyplug.MessagesProjectComponent</implementation-class>
         </component>
+        <component>
+            <implementation-class>ivyplug.dependencies.ProjectDependenciesManager</implementation-class>
+        </component>
     </project-components>
 
     <module-components>
