ISSUE-15 Show warnings if property files resolving fails

--- a/src/main/resources/IvyPlugBundle.properties
+++ b/src/main/resources/IvyPlugBundle.properties
@@ -3,12 +3,12 @@ project.path.to.ivysettings.xml.file=Path to default ivysettings.xml file:
 select.ivysettings.xml.file.location=Select ivysettings.xml file location
 selected.file.will.be.used.for.ivy.configuration=Selected file will be used for Ivy configuration
 file.doesnt.exist=File {0} doesn't exist
-module.ivyplug.configuration=IvyPlug Configuration
+module.ivyplug.configuration=IvyPlug
 determine.ivy.descriptor.and.settings.file.automatically=Determine ivy descriptor and settings file automatically
 path.to.ivy.xml.file=Path to ivy.xml file:
 select.ivy.xml.file.location=Select ivy.xml file location
 selected.file.will.be.used.for.dependencies.resolving=Selected file will be used for dependencies resolving
-project.ivyplug.configuration=IvyPlug Configuration
+project.ivyplug.configuration=IvyPlug
 composite.panel.property.files=Property files:
 composite.panel.custom.properties=Custom properties:
 button.add=Add
@@ -24,7 +24,7 @@ failed.to.load.default.ivysettings.xml=Failed to load default ivysettings.xml
 artifact.downloading.message=Downloading {0} ({1}Kb completed of {2}Kb)
 resolving.dependency.message=Resolving dependency {0}
 pom.downloading.message=Downloading {0}
-messages.toolwindow.tab=Ivy: "{0}"
+messages.toolwindow.tab={0} "{1}"
 synchronizing.data=Synchronizing data
 preparing.to.synchronize.ivy.dependencies=Preparing to synchronize Ivy dependencies...
 ivyexception.reason=Reason: {0}
@@ -33,3 +33,6 @@ failed.to.locate.dependency=Failed to locate dependency {0}
 reimport.ivy.module=Reimport Ivy Module
 reimport.ivy.module.parametrized=Reimport Ivy Module "{0}"
 auto.cleanup.checkbox=Automatically remove unused libraries on rebuild
+general.message.tab=IvyPlug
+failed.to.read.file=Failed to read file {0}
+failed.to.locate.file=File {0} does not exist
