ISSUE-20 Enable "Reimport Ivy module" button only if module has Ivy descriptor

--- a/src/main/resources/IvyPlugBundle.properties
+++ b/src/main/resources/IvyPlugBundle.properties
@@ -35,3 +35,5 @@ auto.cleanup.checkbox=Automatically remove unused libraries on rebuild
 general.message.tab=IvyPlug
 failed.to.read.file=Failed to read file {0}
 failed.to.locate.file=File {0} does not exist
+no.ivy.modules.found.message=No Ivy modules were found.\nPlease, check IvyPlug settings at File->Project Structure->Modules.
+no.ivy.modules.found.title=IvyPlug
