ISSUE-16 Disable IvyPlug actions in "Build" menu when there is no project open or reimport in progress

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -10,6 +10,9 @@
 
     <project-components>
         <component>
+            <implementation-class>ivyplug.IvyPlugProjectComponent</implementation-class>
+        </component>
+        <component>
             <implementation-class>ivyplug.IvyProjectComponent</implementation-class>
         </component>
         <component>
