ISSUE-22 Add module.name, module.path properties

--- a/src/main/resources/IvyPlugBundle.properties
+++ b/src/main/resources/IvyPlugBundle.properties
@@ -31,7 +31,7 @@ ivyexception.reason=Reason: {0}
 preparing.to.synchronize.module.ivy.dependencies=Preparing to synchronize "{0}" Ivy dependencies...
 failed.to.locate.dependency=Failed to locate dependency {0}
 reimport.ivy.module.parametrized=Reimport Ivy Module "{0}"
-auto.cleanup.checkbox=Automatically remove unused libraries on rebuild
+auto.cleanup.checkbox=Automatically remove unused libraries on reimport
 general.message.tab=IvyPlug
 failed.to.read.file=Failed to read file {0}
 failed.to.locate.file=File {0} does not exist
