Plugin information updated

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,9 +1,19 @@
 <idea-plugin version="2">
     <name>IvyPlug</name>
-    <description>Provides integration with Apache Ivy dependency manager.</description>
+    <description><![CDATA[
+        Provides integration with Apache Ivy dependency manager.
+        For more information, see <a href="https://github.com/shyiko/ivyplug/wiki">https://github.com/shyiko/ivyplug/wiki</a>
+    ]]></description>
     <version>1.0</version>
     <vendor email="stanley.shyiko@gmail.com" url="https://github.com/shyiko/ivyplug">Stanley Shyiko</vendor>
     <idea-version since-build="8000"/>
+    <change-notes><![CDATA[
+        1.0
+        <ul>
+            <li>Apache Ivy 2.2.0</li>
+            <li>Intellij IDEA 8+ support</li>
+        </ul>
+    ]]></change-notes>
 
     <application-components>
     </application-components>
