ISSUE-1 Provide ability to set Ivy home directory

--- a/src/main/resources/IvyPlugBundle.properties
+++ b/src/main/resources/IvyPlugBundle.properties
@@ -1,39 +1,45 @@
-module.path.to.ivysettings.xml.file=Path to ivysettings.xml file:
-project.path.to.ivysettings.xml.file=Path to default ivysettings.xml file:
-select.ivysettings.xml.file.location=Select ivysettings.xml file location
-selected.file.will.be.used.for.ivy.configuration=Selected file will be used for Ivy configuration
-file.doesnt.exist=File {0} doesn't exist
-module.ivyplug.configuration=IvyPlug
-determine.ivy.descriptor.and.settings.file.automatically=Determine ivy descriptor and settings file automatically
-path.to.ivy.xml.file=Path to ivy.xml file:
-select.ivy.xml.file.location=Select ivy.xml file location
-selected.file.will.be.used.for.dependencies.resolving=Selected file will be used for dependencies resolving
-project.ivyplug.configuration=IvyPlug
-composite.panel.property.files=Property files:
-composite.panel.custom.properties=Custom properties:
-button.add=Add
-button.remove=Remove
-column.name=Name
-column.value=Value
-button.move.up=Move Up
-button.move.down=Move Down
-filechooser.description.add.properties=Add *.properties
-failed.configuration=Failed to load {0}
-failed.resolve=Failed to load {0}
-failed.to.load.default.ivysettings.xml=Failed to load default ivysettings.xml
-artifact.downloading.message=Downloading {0} ({1}Kb completed of {2}Kb)
-resolving.dependency.message=Resolving dependency {0}
-pom.downloading.message=Downloading {0}
-messages.toolwindow.tab={0} "{1}"
-synchronizing.data=Synchronizing data
-preparing.to.synchronize.ivy.dependencies=Preparing to synchronize Ivy dependencies...
-ivyexception.reason=Reason: {0}
-preparing.to.synchronize.module.ivy.dependencies=Preparing to synchronize "{0}" Ivy dependencies...
-failed.to.locate.dependency=Failed to locate dependency {0}
-reimport.ivy.module.parametrized=Reimport Ivy Module "{0}"
-auto.cleanup.checkbox=Automatically remove unused libraries on reimport
-general.message.tab=IvyPlug
-failed.to.read.file=Failed to read file {0}
-failed.to.locate.file=File {0} does not exist
-no.ivy.modules.found.message=No Ivy modules were found.\nPlease, check IvyPlug settings at File->Project Structure->Modules.
-no.ivy.modules.found.title=IvyPlug
+ui.module.path.to.ivysettings.xml.file=Path to ivysettings.xml file:
+ui.project.path.to.ivysettings.xml.file=Path to default ivysettings.xml file:
+ui.select.ivysettings.xml.file.location=Select ivysettings.xml file location
+ui.selected.file.will.be.used.for.ivy.configuration=Selected file will be used for Ivy configuration
+ui.determine.ivy.descriptor.and.settings.file.automatically=Determine ivy descriptor and settings file automatically
+ui.path.to.ivy.xml.file=Path to ivy.xml file:
+ui.select.ivy.xml.file.location=Select ivy.xml file location
+ui.selected.file.will.be.used.for.dependencies.resolving=Selected file will be used for dependencies resolving
+ui.filechooser.description.add.properties.title=Add *.properties
+ui.reimport.ivy.module.parametrized=Reimport Ivy Module "{0}"
+ui.general.message.tab=IvyPlug
+ui.auto.cleanup.checkbox=Automatically remove unused libraries on reimport
+ui.messages.toolwindow.tab={0} "{1}"
+ui.button.add=Add
+ui.button.remove=Remove
+ui.column.name=Name
+ui.column.value=Value
+ui.button.move.up=Move Up
+ui.button.move.down=Move Down
+ui.composite.panel.property.files=Property files:
+ui.composite.panel.custom.properties=Custom properties:
+ui.ivy.home.directory.label=Ivy home directory:
+ui.ivy.home.directory.filechooser.title=Choose Ivy home directory location
+ui.ivy.home.directory.filechooser.description=All jars under selected directory will loaded by IvyPlug classloader
+failed.to.read.file.exception=Failed to read file {0}
+failed.to.locate.file.exception=File {0} does not exist
+file.doesnt.exist.exception=File {0} doesn't exist
+ivyplug.project.configuration.tab.title=IvyPlug
+ivyplug.module.configuration.tab.title=IvyPlug
+no.ivy.modules.found.message.description=No Ivy modules were found.\nPlease, check IvyPlug settings at File->Project Structure->Modules.
+no.ivy.modules.found.message.title=IvyPlug
+synchronization.task.title=Synchronizing data
+synchronizing.project.message=Synchronizing {0}...
+synchronization.preparing.message=Preparing to synchronize Ivy modules...
+download.progress.event.message=Downloading {0} ({1}Kb completed of {2}Kb)
+resolve.event.message=Resolving dependency {0}
+starting.download.event.message=Downloading {0}
+resolve.configuration.exception.message=Failed to load {0}
+resolve.default.configuration.exception.message=Failed to load default ivysettings.xml
+resolve.resolving.exception.message=Failed to resolve {0}
+resolve.exception.reason=Reason: {0}
+resolve.failed.dependency.message=Failed to resolve dependency {0}
+no.configured.ivy.message.title=IvyPlug
+no.configured.ivy.message.description=Ivy home directory is not configured. Do you want change it now?
+
