--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ task ('zip', type: Zip).doFirst {
     project.dependencies {
 		zip project(":ivyplug-ivy-bridge")
 	}
-    archiveName = "ivyplug-${project.property('build.number')}"
+    archiveName = "ivyplug-${project.property('build.number')}.zip"
     into('ivyplug/lib') {
         from configurations.archives.allArtifactFiles.files
     }
